# ur_robotiq

./: .gitmodules  README.md
picking/: CMakeLists.txt  package.xml
picking/src/: move_group_interface.cpp
robotiq_2f_hand_e_gripper_visualization/: CMakeLists.txt  package.xml  visualize.rviz
robotiq_2f_hand_e_gripper_visualization/launch/: test_robotiq_model.launch
robotiq_2f_hand_e_gripper_visualization/meshes/robotiq/visual/: fingertips.dae  hand-e_base.dae
robotiq_2f_hand_e_gripper_visualization/urdf/: robotiq_model.xacro  robotiq_model_macro.xacro
ur5e_2f85/ur5e_2f85/: CMakeLists.txt  package.xml  setup.py  ur5e_2f85_util.py
ur5e_2f85/ur5e_2f85/config/: ur5e_2f85_params.yaml
ur5e_2f85/ur5e_2f85/launch/: spawn_ur5e_2f85.launch  spawn_ur5e_2f85_single.launch  spawn_ur5e_2f85_twin.launch  ur5e_2f85.launch  ur5e_2f85_single.launch  ur5e_2f85_twin.launch
ur5e_2f85/ur5e_2f85/scripts/: fixed_tf_broadcaster.py  spawn_ur5e_2f85.py  upload_ur5e_2f85.py  ur5e_2f85_util.py
ur5e_2f85/ur5e_2f85_description/: CMakeLists.txt  package.xml
ur5e_2f85/ur5e_2f85_description/launch/: ur5e_2f85_upload.launch
ur5e_2f85/ur5e_2f85_description/urdf/: robotiq_wrist_camera.urdf.xacro  ur5e_2f85_joint_limited_robot.urdf  ur5e_2f85_joint_limited_robot.urdf.xacro  ur5e_2f85_robot.urdf.xacro
ur5e_2f85/ur5e_2f85_gazebo/: CMakeLists.txt  package.xml
ur5e_2f85/ur5e_2f85_gazebo/controller/: arm_controller_ur5e_2f85.yaml  gripper_controller_robotiq_2f85.yaml
ur5e_2f85/ur5e_2f85_gazebo/launch/: controller_utils.launch  ur5e_2f85.launch  ur5e_2f85_joint_limited.launch
ur5e_2f85/ur5e_2f85_gazebo/urdf/: ur5e_2f85_joint_limited.urdf
ur5e_2f85/ur5e_2f85_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  setup.py
ur5e_2f85/ur5e_2f85_moveit_config/config/: fake_controllers.yaml  ompl_planning.yaml  robotiq_2f85_controller.yaml  ros_controllers.yaml  ur5e_2f85.srdf
ur5e_2f85/ur5e_2f85_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5e_2f85_moveit_controller_manager.launch.xml  warehouse.launch
