<?xml version="1.0"?>
<package format="2">
  <name>robotiq_2f_hand_e_gripper_visualization</name>
  <version>1.0.0</version>
  <description>
    <p>
      Package containing visual components (urdfs, meshes, etc.) for use in simulating
      the hand-e model gripper developed by Robotiq.
    </p>
  </description>

  <maintainer email="jih189@ucsd.edu">Jiaming Hu</maintainer>
  <author>Jiaming Hu </author>
  <url type="website">http://ros.org/wiki/robotiq</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>

</package>
